# Markdown-fixed

./: .gitignore  CMakeLists.txt  ChatModel.h  README.md  aiclient.h  appsettings.cpp  appsettings.h  build_win.bat  chatbubble.h  chatpanel.h  contextbuilder.cpp  editorhighlighter.h  mainwindow.cpp  mainwindow.h  markdownparser.h  virtualizededitor.cpp  深化方向.md  面试准备.md
.superpowers/brainstorm/952-1778833150/content/: architecture.html  layout-options.html
.superpowers/brainstorm/952-1778833150/state/: server-stopped
docs/: 01-气泡-数据模型-接口.md  02-DeepSeek客户端-上下文构造.md  03-ChatPanel-MainWindow接线.md
docs/superpowers/specs/: 2026-05-15-ai-assistant-design.md
include/: contextbuilder.h  deepseekclient.h  diffrenderer.h  fileencodingdetector.h  markdownhighlighter.h  virtualizededitor.h
src/: ChatModel.cpp  chatbubble.cpp  chatpanel.cpp  contextbuilder.cpp  deepseekclient.cpp  diffrenderer.cpp  editorhighlighter.cpp  fileencodingdetector.cpp  main.cpp  mainwindow.cpp  markdownhighlighter.cpp  markdownparser.cpp  virtualizededitor.cpp
